@@ -1,3 +1,7 @@
+2012-09-10  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* qp.el (quoted-printable-decode-region): Inline+CSE+strength-reduction.
+
 2012-09-07  Chong Yidong  <cyd@gnu.org>
 
 	* gnus-util.el
